added definitions to properties and added a couple more properties

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -54,6 +54,7 @@
             <section class="box box-8 wrap">8</section>
             <section class="box box-9 wrap">9</section> 
         </section>
+        <h1>Flex-Wrap:Specifies Whether items are forced into a single line or can be wrapped into multiple lines</h1>
         <p>flex-wrap:wrap the content will wrap to the right line below if there's not enough room vertically</p>            
         <section class="container-5">
             <section class="box box-1 wrap">1</section>
@@ -66,6 +67,7 @@
             <section class="box box-8 wrap">8</section>
             <section class="box box-9 wrap">9</section> 
         </section>
+        <h1>Justify-Content:Defines How space is distributed between items in the flex container along the main axis</h1>
         <p>justify-content:flex-end</p>
         <section class="container-6">
             <section class="box box-1">1</section>
