--- a/flexbox/index2.html
+++ b/flexbox/index2.html
@@ -27,6 +27,7 @@
             <section class="box box3">3</section>
             <section class="box box4">4</section>
         </section>
+        <h1></h1>
         <p>Justify-content:flex-end puts it at the bottom vertically and align-items:flex-end puts it at the end horizontally</p>
         <section class="container-4">
             <section class="box box1">1</section>
@@ -48,8 +49,92 @@
             <section class="box box3">3</section>
             <section class="box box4">4</section>
         </section>
-        <section>
-            
+        <h1>align-content:How space is distributed BETWEEN ROWS in flex container
+            along the cross-axis
+        </h1>
+        <p>align-content:flex-start. This puts no space between the rows VERTICALLY and puts it at the top</p>
+        <section class="container-7">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:flex-end. This puts no space between the rows VERTICALLY and puts it at the bottom</p>
+        <section class="container-8">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:flex-end. This puts no space between the rows horizontally and puts it at the end</p>
+        <section class="container-9">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:flex-start. This puts no space between the rows horizontally and puts it at the beginning</p>
+        <section class="container-10">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:center. This centers the rows horizontally </p>
+        <section class="container-11">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:space-around. This leaves space around the columns horizontally </p>
+        <section class="container-12">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
+        </section>
+        <p>align-content:space-between. This leaves space between the columns horizontally </p>
+        <section class="container-13">
+            <section class="box box1">1</section>
+            <section class="box box2">2</section>
+            <section class="box box3">3</section>
+            <section class="box box4">4</section>
+            <section class="box box5">5</section>
+            <section class="box box6">6</section>
+            <section class="box box7">7</section>
+            <section class="box box8">8</section>
+            <section class="box box9">9</section>
         </section>
     </body>
 </html>
