added 2 item property pages

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -4,6 +4,7 @@
         <title>Flexbox intro</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <h1>Container Properties 1</h1>
     <p>When display:flex is set the main axis is set from left to right so that's the way the content flows</p>
     <p>This is also flex-direction:row which is set by default</p>
     <body>
