--- a/flexbox/index2.html
+++ b/flexbox/index2.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
-        <p>Align-Items defines how space is distributed between items in the container along the CROSS AXIS. Opposite of justify content</p>
+        <h1>Container Properties 2</h1>
+        <h1>Align-Items defines how space is distributed between items in the container along the CROSS AXIS. Opposite of justify content</h1>
         <p>Here we justify the content horizontally in the center but vertically we put it to flex-end so it goes to the bottom</p>
         <section class="container">
             <section class="box box1">1</section>
@@ -28,7 +29,7 @@
             <section class="box box4">4</section>
         </section>
         <h1></h1>
-        <p>Justify-content:flex-end puts it at the bottom vertically and align-items:flex-end puts it at the end horizontally</p>
+        <h1>Justify-content:flex-end puts it at the bottom vertically and align-items:flex-end puts it at the end horizontally</h1>
         <section class="container-4">
             <section class="box box1">1</section>
             <section class="box box2">2</section>
